--- a/css/cyclone-reset.css
+++ b/css/cyclone-reset.css
@@ -146,6 +146,13 @@ em {
     overflow: hidden;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    transition:background-color 5000s ease-in-out 0s ;
+}
+
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
     html:focus-within {
