--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,10 @@
+:root {
+	--input-focus-bg: hsla(14, 29%, 35%, 0.388);
+}
+
 body {
+	/* background-color: #f5f5f5; */
+	background-color: cornsilk;
 	display: flex;
 	flex-direction: column;
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -25,14 +31,36 @@ header #header-right #nav-ul {
 }
 
 header #header-right #nav-ul li {
-	display: inline;
+	display: inline-block;
 	padding: 0 1rem;
+  position: relative;
 }
 
 header #header-right #nav-ul li a {
 	color: black;
+  position: relative;
 	text-decoration: none;
 }
+
+header #header-right #nav-ul li a::before {
+  background: black;
+  bottom: 0;
+  content: '';
+  height: 1.5px;
+  left: 0;
+  position: absolute;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  transform-origin: left;
+  -webkit-transition: transform 380ms ease-in-out;
+  transition: transform 380ms ease-in-out;
+  width: 100%;
+}
+
+header #header-right #nav-ul li a:hover::before {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+} 
 
 /* ! adjust somehow ? */
 /* header #header-right #nav-ul li a:visited {
@@ -54,13 +82,13 @@ main #controls-mid,
 main #controls-right  {
 	align-items: center;
 	display: flex;
-	/* position: relative; */
+	position: relative;
 }
 
 main #controls-left #add-book-button {
-  background-color: black;
+  background-color: #724b3f;
   border-radius: 50%;
-  border: none;
+  border: 2px solid black;
   color: white;
 	font-weight: bold;
   cursor: pointer;
@@ -80,12 +108,13 @@ main #controls-mid #search-form {
   width: 55px;
   height: 55px;
   border-radius: 50%;
-  border: 2.5px solid black;
+  border: 2px solid black;
   padding: 5px;
 }
 
 main #controls-mid #search-form:hover,
 main #controls-mid #search-form:valid {
+	background-color: var(--input-focus-bg);
 	border-radius: 25px;
   cursor: pointer;
   width: 200px;
@@ -98,25 +127,30 @@ main #controls-mid #search-form:valid #search-input {
 
 main #controls-mid #search-form:hover .fa-magnifying-glass,
 main #controls-mid #search-form:valid .fa-magnifying-glass {
-  background: black;
+  background: #724b3f;
   color: white;
 }
 
-main #controls-mid #search-form a {
-  color: black;
-  font-size: 1rem;
-	inset: 50px 0 0 0;
+main #controls-mid #search-form ~ #search-close-btn {
+  color: #724b3f;
+	cursor: pointer;
+  font-size: 1.313rem;
 	opacity: 0;
   position: absolute;
+	left: 0;
   text-align: center;
 	transition: all 333ms ease-in-out;
+	transform: translateX(210px);
 	visibility: hidden;
-  width: 100%;
 }
 
-main #controls-mid #search-form:valid a {
+main #controls-mid #search-form:valid ~ #search-close-btn {
 	opacity: 1;
 	visibility: visible;
+}
+
+main #controls-mid #search-form:valid ~ #search-close-btn:hover {
+	transform: translateX(210px) scale(1.1) rotate(90deg);
 }
 
 main #controls-mid #search-form #search-input {
@@ -137,21 +171,21 @@ main #controls-mid #search-form #search-input {
 }
 
 /* clears the ‘X’ from Internet Explorer */
-#search-input::-ms-clear { display: none; width : 0; height: 0; }
-#search-input::-ms-reveal { display: none; width : 0; height: 0; }
+main #controls-mid #search-form #search-input::-ms-clear { display: none; width : 0; height: 0; }
+main #controls-mid #search-form #search-input::-ms-reveal { display: none; width : 0; height: 0; }
 /* clears the ‘X’ from Chrome */
-#search-input::-webkit-search-decoration,
-#search-input::-webkit-search-cancel-button,
-#search-input::-webkit-search-results-button,
-#search-input::-webkit-search-results-decoration { display: none; }
+main #controls-mid #search-form #search-input::-webkit-search-decoration,
+main #controls-mid #search-form #search-input::-webkit-search-cancel-button,
+main #controls-mid #search-form #search-input::-webkit-search-results-button,
+main #controls-mid #search-form #search-input::-webkit-search-results-decoration { display: none; }
 
 main #controls-mid #search-form .fa-magnifying-glass {
   border-radius: 50%;
   box-sizing: border-box;
-  color: black;
+  color: #724b3f;
   font-size: 1rem;
   height: 38px;
-  padding: 12px;
+  padding: 10px;
   position: absolute;
   right: 5px;
   text-align: center;
@@ -161,12 +195,95 @@ main #controls-mid #search-form .fa-magnifying-glass {
   width: 38px;
 }
 
-/* !⬇️! */
-/* !⬇️! */
-/* !⬇️! */
+main #controls-right .custom-select {
+	border-radius: 25px;
+	position: relative;
+	width: 158px;
+}
 
-main #controls select {
+main #controls-right .custom-select select {
+	display: none;
+}
+
+main #controls-right .select-selected {
+  background-color: #724b3f;
+	border: 2px solid black;
+  border-radius: 25px;
+  color: white;
+  display: grid;
+  height: 55px;
+  place-items: center;
+}
+
+/* ? Style the arrow inside the select element: */
+main #controls-right .select-selected:after {
+	border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
+  content: "";
+  height: 0;
+  position: absolute;
+  right: 10px;
+  top: 25px;
+  width: 0;
+}
+
+/* ? Point the arrow upwards when the select box is open (active): */
+main #controls-right .select-selected.select-arrow-active:after {
+  border-color: transparent transparent #fff transparent;
+  top: 15px;
+}
+
+main #controls-right .select-items {
+	border-radius: 25px;
+}
+
+/* ? Style the items (options), including the selected item: */
+main #controls-right .select-items li,
+main #controls-right .select-selected {
+	color: #ffffff;
+  cursor: pointer;
+	list-style: none;
+  padding: 12px 16px;
+  text-align: center;
+}
+
+main #controls-right .select-items li {
+	border: 1px solid transparent;
+	border-color: transparent transparent rgba(0, 0, 0, 0.5) transparent;
+}
+
+main #controls-right .select-items li:last-child {
 	border: none;
+}
+
+main #controls-right .select-arrow-active {
+	border-color: transparent transparent rgba(0, 0, 0, 0.4) transparent;
+	border-radius: 25px 25px 0 0;
+}
+
+/* ? Style items (options): */
+main #controls-right .select-items {
+  background-color: #724b3f;
+  border-radius: 0 0px 25px 25px;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 100%;
+  z-index: 99;
+}
+
+/* ? Hide the items when the select box is closed: */
+main #controls-right .select-hide {
+  display: none;
+}
+
+main #controls-right .select-items div:hover, 
+main #controls-right .same-as-selected {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+main #controls-right .select-items li:last-child {
+	border-radius: 0 0 25px 25px;
 }
 
 /* article {
