--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,12 @@
 :root {
-	--input-focus-bg: hsla(14, 29%, 35%, 0.388);
+  --header-height: 70px;
+	--input-focus-bg: hsla(14, 29%, 35%, 0.3);
 }
 
 body {
 	/* background-color: #f5f5f5; */
 	background-color: cornsilk;
+  color: #724b3f;
 	display: flex;
 	flex-direction: column;
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -12,41 +14,147 @@ body {
 }
 
 header {
-	align-items: center;
+  background-color: #724b3f;
+  box-shadow: 0 10px 20px -8px;
 	display: flex;
-	justify-content: space-around;
+  flex-direction: column;
+	justify-content: space-between;
 	margin-bottom: 25px;
+  min-height: var(--header-height);
+  padding-inline: 5vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
+
+header ~ #page-content-wrapper {
+  padding-top: var(--header-height);
+}
+
+header #header-left {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
 }
 
 header #header-left #header-logo {
+  color: white;
 	font-family: 'Cyclone';
 	font-size: 2.5rem;
 	padding-bottom: 8px;
 }
 
+header #header-left #menu-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: none;
+  border: none;
+  cursor: pointer;
+  height: 55px;
+  padding: 5px;
+  width: 55px;
+  transition: 0.5s all ease-in;
+  z-index: 2;
+}
+
+header #header-left #menu-btn-san {
+  background: white;
+  border-radius: 8px;
+  display: flex;
+  height: 3px;
+  justify-content: center;
+  transition: all .3s ease-in-out;
+  width: 20px;
+}
+
+header #header-left #menu-btn-san::before {
+  background: white;
+  border-radius: 3px;
+  content: '';
+  height: 3px;
+  position: absolute;
+  transform: translateY(-8px);
+  width: 28px;
+}
+
+header #header-left #menu-btn-san::after {
+  background: white;
+  border-radius: 3px;
+  content: '';
+  height: 3px;
+  position: absolute;
+  transform: translateY(8px);
+  width: 33px;
+}
+
+/* MENU-BTN ANIMATION pressStart */
+header #header-left #menu-btn.open #menu-btn-san {
+  background: transparent;
+  box-shadow: none;
+  transform: rotate(-360deg);
+  transition: all 1.8s ease-out;
+}
+
+header #header-left #menu-btn.open #menu-btn-san::before {
+  background: white;
+  opacity: 0.8;
+  transform: rotate(405deg);
+  transition: all 1.8s ease-out;
+  width: 33px;
+}
+
+header #header-left #menu-btn.open #menu-btn-san::after {
+  background: white;
+  opacity: 0.8;
+  transform: rotate(-405deg);
+  transition: all 1.8s ease-out;
+  width: 33px;
+}
+
+header #header-left:has(#menu-btn.open) ~ #header-right {
+  display: flex;
+}
+
+header #header-left #menu-btn.open~nav a {
+  font-size: 2rem;
+  letter-spacing: 1.8px;
+}
+/* MENU-BTN ANIMATION gameOver */
+
+header #header-right {
+  display: none;
+  flex-direction: column;
+  gap: 25px;
+  margin-bottom: 25px;
+}
+
 header #header-right #nav-ul {
 	display: flex;
+  flex-direction: column;
+  gap: 1rem;
 	font-size: 1rem;
 	list-style: none;
 }
 
 header #header-right #nav-ul li {
 	display: inline-block;
-	padding: 0 1rem;
   position: relative;
 }
 
 header #header-right #nav-ul li a {
-	color: black;
+	color: white;
   position: relative;
 	text-decoration: none;
 }
 
 header #header-right #nav-ul li a::before {
-  background: black;
-  bottom: 0;
+  background: white;
+  bottom: -2px;
   content: '';
-  height: 1.5px;
+  height: 1px;
   left: 0;
   position: absolute;
   -webkit-transform: scaleX(0);
@@ -62,6 +170,19 @@ header #header-right #nav-ul li a:hover::before {
   transform: scaleX(1);
 } 
 
+header #header-right #header-btns {
+  display: flex;
+  gap: 15px;
+}
+
+header #header-right .header-btn {
+  border: 2px solid white;
+  border-radius: 11px;
+  color: white;
+  cursor: pointer;
+  padding: 3px 18px;
+}
+
 /* ! adjust somehow ? */
 /* header #header-right #nav-ul li a:visited {
 	color: red;
@@ -71,21 +192,44 @@ main {
 	display: grid;
 }
 
+#page-content-wrapper aside section {
+  border: 2px solid #724b3f;
+  margin-bottom: 33px;
+}
+
+#page-content-wrapper aside ul {
+  list-style: none;
+}
+
+main #controls-wrapper {
+  background-color: #724b3f;
+  box-shadow: 0 10px 20px -8px;
+  display: grid;
+  margin-bottom: 25px;
+  padding-block: 15px;
+  place-items: center;
+}
+
 main #controls {
-	align-items: center;
+  background-color: cornsilk;
+  border: 3px solid cornsilk;
+  box-shadow: inset 0 -3px 15px #724b3f;
+  border-radius: 75px;
 	display: flex;
-	justify-content: space-evenly;
+  flex-direction: column;
+  gap: 15px;
+  margin-inline: auto;
+  padding: 20px 45px;
 }
 
-main #controls-left,
-main #controls-mid,
-main #controls-right  {
-	align-items: center;
-	display: flex;
-	position: relative;
+main #controls #controls-top {
+  align-items: center;
+  justify-content: space-evenly;
+  display: flex;
+  gap: 15px;
 }
 
-main #controls-left #add-book-button {
+main #controls #add-book-button {
   background-color: #724b3f;
   border-radius: 50%;
   border: 2px solid black;
@@ -98,11 +242,15 @@ main #controls-left #add-book-button {
   width: 55px;
 }
 
-main #controls-left #add-book-text {
+main #controls #add-book-text {
 	vertical-align: 5px;
 } 
 
-main #controls-mid #search-form {
+main #controls #search-form-container {
+  position: relative;
+}
+
+main #controls #search-form {
   position: relative;
   transition: all 1s;
   width: 55px;
@@ -112,48 +260,53 @@ main #controls-mid #search-form {
   padding: 5px;
 }
 
-main #controls-mid #search-form:hover,
-main #controls-mid #search-form:valid {
+main #controls #search-form:hover,
+main #controls #search-form:valid {
 	background-color: var(--input-focus-bg);
 	border-radius: 25px;
   cursor: pointer;
   width: 200px;
 }
 
-main #controls-mid #search-form:hover #search-input,
-main #controls-mid #search-form:valid #search-input {
+main #controls #search-form:hover #search-input,
+main #controls #search-form:valid #search-input {
   display: block;
 }
 
-main #controls-mid #search-form:hover .fa-magnifying-glass,
-main #controls-mid #search-form:valid .fa-magnifying-glass {
+main #controls #search-form:hover .fa-magnifying-glass,
+main #controls #search-form:valid .fa-magnifying-glass {
   background: #724b3f;
   color: white;
 }
 
-main #controls-mid #search-form ~ #search-close-btn {
+main #controls #search-form > #search-submit-btn {
+  cursor: pointer;
+}
+
+main #controls #search-form > #search-close-btn {
   color: #724b3f;
 	cursor: pointer;
-  font-size: 1.313rem;
+  font-size: 1.5rem;
 	opacity: 0;
   position: absolute;
-	left: 0;
+	right: -30px;
   text-align: center;
+  top: 50%;
 	transition: all 333ms ease-in-out;
-	transform: translateX(210px);
+	transform: translateY(-50%);
 	visibility: hidden;
 }
 
-main #controls-mid #search-form:valid ~ #search-close-btn {
+main #controls #search-form:valid > #search-close-btn {
 	opacity: 1;
 	visibility: visible;
 }
 
-main #controls-mid #search-form:valid ~ #search-close-btn:hover {
-	transform: translateX(210px) scale(1.1) rotate(90deg);
+main #controls #search-form:valid > #search-close-btn:hover {
+	transform: translateY(-50%) scale(1.1) rotate(90deg);
 }
 
-main #controls-mid #search-form #search-input {
+main #controls #search-form #search-input {
   background: transparent;
   border-radius: 25px;
   border: 0;
@@ -171,15 +324,15 @@ main #controls-mid #search-form #search-input {
 }
 
 /* clears the ‘X’ from Internet Explorer */
-main #controls-mid #search-form #search-input::-ms-clear { display: none; width : 0; height: 0; }
-main #controls-mid #search-form #search-input::-ms-reveal { display: none; width : 0; height: 0; }
+main #controls #search-form #search-input::-ms-clear { display: none; width : 0; height: 0; }
+main #controls #search-form #search-input::-ms-reveal { display: none; width : 0; height: 0; }
 /* clears the ‘X’ from Chrome */
-main #controls-mid #search-form #search-input::-webkit-search-decoration,
-main #controls-mid #search-form #search-input::-webkit-search-cancel-button,
-main #controls-mid #search-form #search-input::-webkit-search-results-button,
-main #controls-mid #search-form #search-input::-webkit-search-results-decoration { display: none; }
+main #controls #search-form #search-input::-webkit-search-decoration,
+main #controls #search-form #search-input::-webkit-search-cancel-button,
+main #controls #search-form #search-input::-webkit-search-results-button,
+main #controls #search-form #search-input::-webkit-search-results-decoration { display: none; }
 
-main #controls-mid #search-form .fa-magnifying-glass {
+main #controls #search-form .fa-magnifying-glass {
   border-radius: 50%;
   box-sizing: border-box;
   color: #724b3f;
@@ -195,20 +348,24 @@ main #controls-mid #search-form .fa-magnifying-glass {
   width: 38px;
 }
 
-main #controls-right .custom-select {
+main #controls #sort-select-container {
+  align-self: center;
+}
+
+main #controls .custom-select {
 	border-radius: 25px;
 	position: relative;
 	width: 158px;
 }
 
-main #controls-right .custom-select select {
+main #controls .custom-select select {
 	display: none;
 }
 
-main #controls-right .select-selected {
+main #controls .select-selected {
   background-color: #724b3f;
-	border: 2px solid black;
   border-radius: 25px;
+  border: 2px solid black;
   color: white;
   display: grid;
   height: 55px;
@@ -216,9 +373,9 @@ main #controls-right .select-selected {
 }
 
 /* ? Style the arrow inside the select element: */
-main #controls-right .select-selected:after {
-	border: 6px solid transparent;
+main #controls .select-selected:after {
   border-color: #fff transparent transparent transparent;
+  border: 6px solid transparent;
   content: "";
   height: 0;
   position: absolute;
@@ -228,18 +385,18 @@ main #controls-right .select-selected:after {
 }
 
 /* ? Point the arrow upwards when the select box is open (active): */
-main #controls-right .select-selected.select-arrow-active:after {
+main #controls .select-selected.select-arrow-active:after {
   border-color: transparent transparent #fff transparent;
   top: 15px;
 }
 
-main #controls-right .select-items {
+main #controls .select-items {
 	border-radius: 25px;
 }
 
 /* ? Style the items (options), including the selected item: */
-main #controls-right .select-items li,
-main #controls-right .select-selected {
+main #controls .select-items li,
+main #controls .select-selected {
 	color: #ffffff;
   cursor: pointer;
 	list-style: none;
@@ -247,22 +404,22 @@ main #controls-right .select-selected {
   text-align: center;
 }
 
-main #controls-right .select-items li {
+main #controls .select-items li {
 	border: 1px solid transparent;
 	border-color: transparent transparent rgba(0, 0, 0, 0.5) transparent;
 }
 
-main #controls-right .select-items li:last-child {
+main #controls .select-items li:last-child {
 	border: none;
 }
 
-main #controls-right .select-arrow-active {
+main #controls .select-arrow-active {
 	border-color: transparent transparent rgba(0, 0, 0, 0.4) transparent;
 	border-radius: 25px 25px 0 0;
 }
 
 /* ? Style items (options): */
-main #controls-right .select-items {
+main #controls .select-items {
   background-color: #724b3f;
   border-radius: 0 0px 25px 25px;
   left: 0;
@@ -273,17 +430,28 @@ main #controls-right .select-items {
 }
 
 /* ? Hide the items when the select box is closed: */
-main #controls-right .select-hide {
+main #controls .select-hide {
   display: none;
 }
 
-main #controls-right .select-items div:hover, 
-main #controls-right .same-as-selected {
+main #controls .select-items div:hover, 
+main #controls .same-as-selected {
   background-color: rgba(0, 0, 0, 0.3);
 }
 
-main #controls-right .select-items li:last-child {
+main #controls .select-items li:last-child {
 	border-radius: 0 0 25px 25px;
+}
+
+#book-case {
+  display: grid;
+  grid-template-columns: repeat( auto-fit, minmax(150px, 1fr));
+  margin-bottom: 50px;
+}
+
+.book {
+  height: 200px;
+  border: 2px solid red;
 }
 
 /* article {
@@ -292,4 +460,62 @@ main #controls-right .select-items li:last-child {
 }
 
 footer {
+} */
+
+@media only screen and (min-width: 768px) {
+  header {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    justify-content: space-between;
+    margin-bottom: 25px;
+    padding-inline: 5vw;
+  }
+
+  header #header-left #menu-btn {
+    display: none;
+  }
+
+  header #header-right {
+    align-items: center;
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    margin-bottom: 0;
+    justify-content: space-between;
+  }
+
+  header #header-right #nav-ul {
+    display: flex;
+    flex-direction: row;
+    font-size: 1rem;
+    gap: 1rem;
+    list-style: none;
+  }
+
+  main #controls {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    gap: 75px;
+	  /* justify-content: space-evenly; */
+    margin-bottom: 55px;
+    padding-inline: 5vw;
+  }
+
+  #page-content-wrapper {
+    display: grid;
+    gap: 40px;
+    grid-template-columns: 3fr 1fr;
+    padding-inline: 5vw;
+  }
+  
+  main #controls #controls-bottom {
+    gap: 75px;
+  }
+}
+
+/* @media only screen and (min-width: 1024px) {
+
 } */
