--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 /* DEFAULT pressStart */
 h3 {
   font-family: 'Cyclone', sans-serif;
-  font-size: clamp(2.125rem, 4vw, 2.5rem);
+  font-size: clamp(1.875rem, 4vw, 2.125rem);
 }
 
 /* DEFAULT gameOver */
@@ -51,7 +51,7 @@ header #header-left #header-logo {
   color: white;
 	font-family: 'Cyclone';
 	font-size: 2.5rem;
-	padding-bottom: 8px;
+	padding-bottom: 7px;
 }
 
 header #header-left #menu-btn {
@@ -196,16 +196,21 @@ header #header-right .header-btn {
 	color: red;
 }  */
 
+#page-content-wrapper #book-case,
+#page-content-wrapper aside {
+  padding-inline: 5vw
+}
+
 main {
   align-items: start;
 	display: grid;
-  min-height: 100vh;
   grid-template-rows: auto 1fr;
   /* 
   ? Set the grid-template-rows property to auto 1fr to create two rows in the grid, 
   ? with the first row set to the height of its content and the second row set to take 
   ? up the remaining space. 
   */
+  margin-bottom: 25px;
 }
 
 main #controls-wrapper {
@@ -452,44 +457,92 @@ main #controls .select-items li:last-child {
 	border-radius: 0 0 25px 25px;
 }
 
-aside section {
-  border: 2px solid #724b3f;
-  margin-bottom: 25px;
-  padding: 8px;
-}
-
-aside section h3 {
-  text-align: center;
-}
-
-aside ul {
-  list-style: none;
-}
-
-aside #advertisement-box video {
-  object-fit: contain;
-}
-
-#book-case {
+main #book-case {
   align-self: start;
-  border: 2px solid blueviolet;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
   grid-auto-rows: minmax(250px, auto);
 }
 
-.book {
-  border: 2px solid red;
-  /* border-radius: 50px; */
+main #book-case .book {
+  border: 1px solid red;
+  border-radius: 50px;
 }
 
 /* article {
 	border: 2px solid red;
 	border-radius: 12px;
 }
+*/
 
-footer {
-} */
+aside {
+  font-size: clamp(0.8313rem, 1.3vw, 1rem);
+}
+
+aside section {
+  background: linear-gradient(145deg, #e6dfc6, #ffffeb);
+  box-shadow:  7px 7px 46px #ada996,
+              -7px -7px 46px #ffffff;
+  border-radius: 25px;
+  margin-bottom: 25px;
+  padding: 25px 25px;
+}
+
+aside section:hover h3::before {
+  transform: scaleX(0.5);
+}
+
+aside section h3 {
+  /* border: 2px solid red; */
+  margin-bottom: 15px;
+  padding-bottom: 3px;
+  position: relative;
+  /* text-align: center; */
+  z-index: 0;
+}
+
+aside section h3::before {
+  content: '';
+  bottom: 5px;
+  border-radius:30%;
+  left: -3px;
+  height: 2px;
+  position: absolute;
+  background: linear-gradient(to left, transparent, #724b3f);
+  width: 100%;
+  transform: scaleX(1);
+  transform-origin: left;
+  transition: all 380ms ease-in-out;
+  z-index: -1;
+} 
+
+aside ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  list-style: none;
+}
+
+aside #notifications #notifications-list li {
+  align-items: center;
+  display: flex;
+  gap: 8px;
+
+}
+
+aside #advertisement-box video {
+  border-radius: 25px;
+  object-fit: contain;
+}
+
+aside li {
+  width: max-content;
+}
+
+.iconic {
+  display: inline-block;
+}
+
 
 @media only screen and (min-width: 768px) {
   header {
@@ -549,7 +602,14 @@ footer {
     display: grid;
     align-items: start;
     /* gap: 40px; */
-    padding-inline: 5vw;
+    padding-inline: 3vw;
+  }
+
+  main #book-case {
+    background-color: cornsilk;
+    border-radius: 50px;
+    box-shadow: inset 5px 5px 9px #d4ceb7,
+              inset -5px -5px 9px #ffffff;
   }
 }
 
@@ -558,7 +618,15 @@ footer {
     display: grid;
     gap: 40px;
     grid-template-columns: 5fr 2fr;
-    padding-inline: 5vw;
+  }
+
+  #page-content-wrapper #book-case,
+  #page-content-wrapper aside {
+    padding-inline: unset;
+  }
+
+  main {
+    margin-bottom: 0;
   }
 
   main #controls {
@@ -573,15 +641,17 @@ footer {
 
   main #controls #search-form:hover, 
   main #controls #search-form:valid {
-    width: 250px;
+    width: 210px;
   }
 
+  aside {
+    padding-top: 25px;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
   main #controls #search-form:hover, 
   main #controls #search-form:valid {
-    width: 350px;
+    width: 315px;
   }
-
 }
