remove margin on bottom of last paragraph in subscribe section

--- a/css/styles.css
+++ b/css/styles.css
@@ -669,7 +669,7 @@ aside #subscribe #subscribe-text-content {
   text-align: center;
 }
 
-aside #subscribe #subscribe-text-content p {
+aside #subscribe #subscribe-text-content p:not(:last-child) {
   margin-bottom: 15px;
 }
 
