--- a/css/styles.css
+++ b/css/styles.css
@@ -374,8 +374,8 @@ main #controls #add-book-container :modal #modal-close-btn {
   cursor: pointer;
   font-size: 1.5rem;
   position: absolute;
-  right: 50px;
-  top: 20px;
+  right: 35px;
+  top: 22px;
   transition: all 333ms ease-in-out;
 }
 
@@ -697,7 +697,7 @@ main #book-case {
   align-self: start;
   display: grid;
   grid-auto-rows: minmax(175px, auto);
-  grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(175px, 1fr));
   padding-block: 25px;
 }
 
@@ -905,6 +905,41 @@ aside #socials #socials-icons .socials-icon svg {
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+
+/* before footer settings */
+footer {
+  background: linear-gradient(to bottom, transparent, #fff8dc);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding-inline: 10vw;
+  padding-bottom: 10px;
+  right: 0;
+  /* height: 300px; */
+  /* opacity: 0.1; */
+}
+
+footer #footer-logo {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+footer #footer-logo a {
+  width: 10%;
+}
+
+footer #footer-links ul {
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+}
+
+footer #footer-links a {
+  color: #724b3f;
+  text-decoration: none;
 }
 
 @media only screen and (min-width: 768px) {
