--- a/css/styles.css
+++ b/css/styles.css
@@ -50,13 +50,12 @@ button:hover {
 /* DEFAULT gameOver */
 
 body {
-	/* background-color: #f5f5f5; */
 	background-color: cornsilk;
   color: #724b3f;
 	display: flex;
 	flex-direction: column;
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: clamp(0.8313rem, 1.3vw, 1rem);
+  font-size: 0.8313rem;
 	position: relative;
 }
 
@@ -177,10 +176,6 @@ header #header-left:has(#menu-btn.open) ~ #header-right {
   display: flex;
 }
 
-header #header-left #menu-btn.open~nav a {
-  font-size: 2rem;
-  letter-spacing: 1.8px;
-}
 /* MENU-BTN ANIMATION gameOver */
 
 header #header-right {
@@ -191,11 +186,10 @@ header #header-right {
 }
 
 header #header-right #nav-ul {
-	display: flex;
+  display: flex;
   flex-direction: column;
   gap: 1rem;
-	font-size: 1rem;
-	list-style: none;
+  list-style: none;
 }
 
 header #header-right #nav-ul li {
@@ -783,78 +777,6 @@ aside #trending #trending-list .trending-list-li a {
   text-decoration: none;
 }
 
-aside #subscribe #sign-up-form {
-  display: flex;
-  gap: 8px;
-  justify-content: space-between;
-  margin-bottom: 15px;
-  margin-inline: auto;
-}
-
-aside #subscribe #email {
-  appearance: none;
-  background: #fff8dc;
-  border-radius: 25px;
-  border: 1px solid #724b3f;
-  box-shadow: inset 6px 6px 12px #dbd5bd,
-            inset -6px -6px 12px #fffffb;
-  color: #724b3f;
-  flex: 1;
-  padding: 10px 15px;
-}
-
-aside #subscribe #sign-up-btn {
-  color: #724b3f;
-}
-
-aside #subscribe #email::placeholder {
-  color: hsla(14, 29%, 35%, 0.7);
-}
-
-aside #subscribe #email::-ms-input-placeholder {
-  color: hsla(14, 29%, 35%, 0.7);
-}
-
-aside #subscribe #email:-ms-input-placeholder {
-  color: hsla(14, 29%, 35%, 0.7);
-}
-
-aside #subscribe #sign-up-btn {
-  border-radius: 25px;
-  border: 1px solid #724b3f;
-  padding-inline: 15px;
-  position: relative;
-  transition: all 88ms ease-in-out;
-  z-index: 1;
-}
-
-aside #subscribe #sign-up-btn:active {
-  transform: translateY(2px);
-} 
-
-aside #subscribe #sign-up-btn::before {
-  border-radius: inherit;
-  box-shadow: 0 4px 0px -1px hsla(14, 29%, 35%, 0.8);
-  content: '';
-  inset: 0;
-  position: absolute;
-  transition: all 111ms ease-in-out;
-  z-index: -1;
-}
-
-aside #subscribe #sign-up-btn:active::before {
-  opacity: 0.3;
-  transform: translateY(-3px);
-}
-
-aside #subscribe #subscribe-text-content {
-  text-align: center;
-}
-
-aside #subscribe #subscribe-text-content p:not(:last-child) {
-  margin-bottom: 15px;
-}
-
 aside #socials {
   display: grid;
   grid-template-rows: auto 1fr;
@@ -909,15 +831,95 @@ aside #socials #socials-icons .socials-icon svg {
 
 /* before footer settings */
 footer {
-  background: linear-gradient(to bottom, transparent, #fff8dc);
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  padding-inline: 10vw;
+  background: #724b3f;
+  box-shadow: 0 -10px 20px -8px #724b3f;
+  color: white;
   padding-bottom: 10px;
-  right: 0;
-  /* height: 300px; */
-  /* opacity: 0.1; */
+  padding-inline: 5vw;
+}
+
+footer h3 {
+  margin-bottom: 10px;
+}
+
+footer #footer-top-wrapper {
+  align-items: top;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  justify-content: center;
+  padding-block: 25px;  
+}
+
+footer #sign-up-form {
+  display: flex;
+  gap: 8px;
+  justify-content: start;
+  margin-bottom: 20px;
+  margin-inline: auto;
+}
+
+footer #email {
+  appearance: none;
+  background: #fff8dc;
+  border-radius: 25px;
+  border: 1px solid #724b3f;
+  box-shadow: inset 6px 6px 12px #dbd5bd,
+            inset -6px -6px 12px #fffffb;
+  color: #724b3f;
+  flex: 1;
+  padding: 10px 15px;
+}
+
+footer #sign-up-btn {
+  color: white;
+}
+
+footer #email::placeholder {
+  color: hsla(14, 29%, 35%, 0.7);
+}
+
+footer #email::-ms-input-placeholder {
+  color: hsla(14, 29%, 35%, 0.7);
+}
+
+footer #email:-ms-input-placeholder {
+  color: hsla(14, 29%, 35%, 0.7);
+}
+
+footer #sign-up-btn {
+  border-radius: 25px;
+  border: 1px solid white;
+  padding-inline: 15px;
+  position: relative;
+  transition: all 88ms ease-in-out;
+  z-index: 1;
+}
+
+footer #sign-up-btn:active {
+  transform: translateY(2px);
+} 
+
+footer #sign-up-btn::before {
+  border-radius: inherit;
+  box-shadow: 0 4px 0px -1px rgba(255, 255, 255, 0.8);
+  content: '';
+  inset: 0;
+  position: absolute;
+  transition: all 111ms ease-in-out;
+  z-index: -1;
+}
+
+footer #sign-up-btn:active::before {
+  opacity: 0.3;
+  transform: translateY(-3px);
+}
+
+footer #subscribe-text-content {
+  /* text-align: center; */
+}
+
+footer #subscribe-text-content p:not(:last-child) {
+  margin-bottom: 8px;
 }
 
 footer #footer-logo {
@@ -927,18 +929,52 @@ footer #footer-logo {
   justify-content: center;
 }
 
+footer #footer-logo:hover p {
+  visibility: visible;
+  transform: scale(1);
+  opacity: 1;
+}
+
+/* ! change to animation */
+footer #footer-logo:hover a {
+  transform: rotate(3turn);
+  transition-delay: 0.555s;
+}
+
+footer #footer-logo p {
+  font-family: 'pixeBoy', sans-serif;
+  font-size: 1.125rem;
+  text-shadow: 0 0 5px white;
+  transform: scale(0);
+  transition: opacity 380ms ease-in-out, transform 0.555s ease-in-out, visibility 0.555s ease-in-out;
+  visibility: hidden;
+}
+
 footer #footer-logo a {
-  width: 10%;
+  /* filter: drop-shadow(0 0 5px white); */
+  transition: all 1s ease-in-out;
+  width: 70px;
+}
+
+footer #footer-links {
+  text-align: end;
 }
 
 footer #footer-links ul {
+  align-items: end;
   display: flex;
-  justify-content: space-around;
+  gap: 11px;
+  justify-content: space-between;
+  flex-direction: column;
   list-style: none;
 }
 
+footer #footer-links ul li {
+  width: max-content;
+}
+
 footer #footer-links a {
-  color: #724b3f;
+  color: white;
   text-decoration: none;
 }
 
@@ -965,11 +1001,7 @@ footer #footer-links a {
   }
 
   header #header-right #nav-ul {
-    display: flex;
     flex-direction: row;
-    font-size: 1rem;
-    gap: 1rem;
-    list-style: none;
   }
 
   aside {
@@ -1023,7 +1055,7 @@ footer #footer-links a {
     grid-template-areas:
     'notifications friends'
     'trending advertisement'
-    'subscribe socials';
+    'socials socials';
     grid-template-columns: 1fr 1fr;
     justify-content: center;
   }
@@ -1063,7 +1095,7 @@ footer #footer-links a {
   #page-content-wrapper {
     display: grid;
     gap: 40px;
-    grid-template-columns: 5fr 1fr;
+    grid-template-columns: 2fr 1fr;
     margin-inline: auto;
     max-width: 1400px;
   }
@@ -1092,7 +1124,7 @@ footer #footer-links a {
     background: unset;
     border-radius: unset;
     box-shadow:  unset;
-    grid-template-areas: 'notifications' 'friends' 'trending' 'advertisement' 'subscribe' 'socials';
+    grid-template-areas: 'notifications' 'friends' 'trending' 'advertisement' 'socials';
     grid-template-columns: 1fr;
     padding-top: 25px;
   }
